# p10-oc-python

./: .flake8  Makefile  README.md  db.sqlite3  pep8_report.txt  pyproject.toml
scripts/: check_pep8.py
softdesk/: asgi.py  settings.py  urls.py  wsgi.py
supports_api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
supports_api/migrations/: 0001_initial.py  0002_alter_user_age.py
